# SpeckleCn2Profiler

./: .coverage.simone-XPS-15-9530.38067.XtsLQpxx  .coverage.simone-XPS-15-9530.38421.XhzZbspx  .coverage.simone-XPS-15-9530.47596.XSEPreex  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  index.html  mkdocs.yml  mypy.ini  objects.inv  paper.bib  paper.md  pyproject.toml  requirements.txt  requirements_full.txt  setup.py  sitemap.xml
.github/workflows/: build.yaml  check_runner_update.yaml  docs.yaml  draft-pdf.yaml  generate_test_reference.yaml  pio.yaml  pipy_release.yaml  publish.yaml  publish_on_tag.yaml  test.yaml
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
api/api/: index.html
api/io/: index.html
api/loss/: index.html
api/mlops/: index.html
api/models/: index.html
api/normalizer/: index.html
api/plot/: index.html
api/postprocess/: index.html
api/preprocess/: index.html
api/scnn/: index.html
api/transformations/: index.html
api/utils/: index.html
docs/: example.md  installation.md  quickstart.md
docs/api/: api.md  io.md  loss.md  mlops.md  models.md  normalizer.md  plot.md  postprocess.md  preprocess.md  scnn.md  transformations.md  utils.md
docs/examples/: input_data.md  run.md
docs/source/: conf.py  index.rst
examples/input_data/: index.html
examples/run/: index.html
home/: index.html
installation/: index.html
notebooks_examples/: Prototype.ipynb  Prototype.py
paper/: paper.bib  paper.md
quickstart/: index.html
scripts/: setup_test.py
search/: search_index.json
site/: 404.html  index.html  objects.inv  sitemap.xml
site/CODE_OF_CONDUCT/: index.html
site/CONTRIBUTING/: index.html
site/api/api/: index.html
site/api/io/: index.html
site/api/mlops/: index.html
site/api/models/: index.html
site/home/: index.html
site/installation/: index.html
site/search/: search_index.json
speckcn2/: __init__.py  histos.py  io.py  loss.py  mlmodels.py  mlops.py  normalizer.py  plots.py  postprocess.py  preprocess.py  scnn.py  test_histos.py  test_io.py  test_mlmodels.py  test_mlops.py  test_postprocess.py  test_preprocess.py  transformations.py  utils.py
speckcn2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
speckcn2/assets/test/: test_config.yaml
src/speckcn2/: __init__.py  io.py  loss.py  mlmodels.py  mlops.py  normalizer.py  plots.py  postprocess.py  preprocess.py  scnn.py  transformations.py  utils.py
tests/: conftest.py  test_example.py  test_integration.py  test_io.py  test_mlmodels.py  test_mlops.py  test_postprocess.py  test_preprocess.py  test_requirements.txt
tests/test_data/: test_config.yaml
